--- a/auth.html
+++ b/auth.html
@@ -1,39 +1,56 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-  <meta charset="UTF-8" />
-  <title>Autenticando — Sistema Oasis</title>
+  <meta charset="UTF-8">
+  <title>Autenticando — Supremo Tribunal de Oasis</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
-  <p>🔐 Finalizando autenticação...</p>
+  <p>🔐 Finalizando autenticação, aguarde...</p>
 
   <script>
     try {
-      const hash = new URLSearchParams(window.location.hash.substring(1));
-      const payload = hash.get("user");
+      /*
+        Worker redireciona assim:
+        auth.html#user=JSON_ENCODED
+      */
+
+      const hash = window.location.hash.substring(1);
+      const params = new URLSearchParams(hash);
+      const payload = params.get("user");
 
       if (!payload) throw "Payload ausente";
 
-      const user = JSON.parse(decodeURIComponent(payload));
+      const usuario = JSON.parse(decodeURIComponent(payload));
 
-      if (!["cidadao", "staff", "coordenacao"].includes(user.nivel)) {
-        throw "Nível inválido";
+      if (!usuario.nome || !usuario.cid || !usuario.nivel) {
+        throw "Usuário inválido";
       }
 
-      localStorage.setItem("usuario", JSON.stringify({
-        cid: user.id,
-        nome: user.nome,
-        nivel: user.nivel
-      }));
+      /* Estrutura única do sistema */
+      const usuarioFinal = {
+        nome: usuario.nome,
+        cid: usuario.cid,
+        nivel: usuario.nivel
+      };
 
-      if (user.nivel === "cidadao") {
-        location.href = "tickets.html";
-      } else {
+      localStorage.setItem(
+        "usuario",
+        JSON.stringify(usuarioFinal)
+      );
+
+      /* 🔀 Redirecionamento por nível */
+      if (usuarioFinal.nivel === "coordenacao") {
+        location.href = "staff/coordenacao.html";
+      } else if (usuarioFinal.nivel === "juridico") {
         location.href = "staff/dashboard.html";
+      } else {
+        location.href = "tickets.html";
       }
 
     } catch (e) {
+      console.error("Erro na autenticação:", e);
       localStorage.clear();
       location.href = "index.html";
     }
