--- a/welcome.html
+++ b/welcome.html
@@ -8,7 +8,7 @@
   <style>
     body {
       margin: 0;
-      font-family: "Georgia", serif;
+      font-family: Georgia, serif;
       background: radial-gradient(circle, #7a1c1c, #3b0d0d);
       min-height: 100vh;
       display: flex;
@@ -19,31 +19,32 @@
 
     .container {
       background: #f8f4ee;
-      border-radius: 18px;
-      max-width: 520px;
+      border-radius: 22px;
+      max-width: 540px;
       width: 100%;
-      padding: 40px 30px;
+      padding: 42px 34px;
       border: 2px solid #d4af37;
-      box-shadow: 0 25px 60px rgba(0,0,0,.4);
+      box-shadow: 0 30px 70px rgba(0,0,0,.45);
       text-align: center;
     }
 
     .logo {
-      width: 150px;
-      margin-bottom: 20px;
+      width: 130px;
+      margin-bottom: 18px;
     }
 
     h1 {
       font-size: 22px;
       color: #5b0f0f;
       letter-spacing: 1px;
+      margin-bottom: 6px;
     }
 
-    p {
+    .welcome {
       font-size: 14px;
       color: #333;
       line-height: 1.6;
-      margin: 18px 0 28px;
+      margin-bottom: 26px;
     }
 
     .btn {
@@ -59,12 +60,21 @@
       margin-bottom: 12px;
     }
 
-    .btn:hover {
+    .btn.secondary {
       background: #8c1d1d;
     }
 
+    .btn.ghost {
+      background: #bfa76a;
+      color: #3b2a00;
+    }
+
+    .btn:hover {
+      opacity: .92;
+    }
+
     .footer {
-      margin-top: 20px;
+      margin-top: 22px;
       font-size: 11px;
       color: #555;
       letter-spacing: .4px;
@@ -78,9 +88,10 @@
   <img src="logo-oasis.png" class="logo" alt="Supremo Tribunal de Oasis">
 
   <h1>SUPREMO TRIBUNAL DE OASIS ⚖️</h1>
-  <p id="texto"></p>
 
-  <button class="btn" id="btnPrincipal"></button>
+  <div class="welcome" id="texto"></div>
+
+  <div id="botoes"></div>
 
   <div class="footer">
     Sistema institucional • acesso monitorado
@@ -90,36 +101,82 @@
 <script>
   const usuario = JSON.parse(localStorage.getItem("usuario"));
 
-  // 🔐 Proteção sem loop
   if (!usuario || !usuario.nivel) {
     location.replace("index.html");
   }
 
   const texto = document.getElementById("texto");
-  const btn = document.getElementById("btnPrincipal");
+  const botoes = document.getElementById("botoes");
 
+  /* ================= CIDADAO ================= */
   if (usuario.nivel === "cidadao") {
-    texto.innerText =
-      `Bem-vindo(a), ${usuario.nome}.
-       Utilize o portal oficial do Supremo Tribunal de Oasis para abrir e acompanhar solicitações.`;
-    btn.innerText = "📂 Acessar minhas solicitações";
-    btn.onclick = () => location.href = "tickets.html";
+    texto.innerHTML = `
+      Bem-vindo(a), <b>${usuario.nome}</b>.<br>
+      Utilize o portal oficial do Supremo Tribunal de Oasis
+      para acessar serviços judiciais.
+    `;
+
+    botoes.innerHTML = `
+      <button class="btn" onclick="go('tickets.html')">
+        📂 Solicitações
+      </button>
+
+      <button class="btn secondary" onclick="go('tickets.html#chat')">
+        🎫 Tickets
+      </button>
+
+      <button class="btn ghost" onclick="go('tickets.html#precos')">
+        💰 Valores e serviços
+      </button>
+
+      <button class="btn secondary" onclick="go('tickets.html#andamento')">
+        🕒 Solicitações em andamento
+      </button>
+    `;
   }
 
+  /* ================= JURIDICO ================= */
   if (usuario.nivel === "juridico") {
-    texto.innerText =
-      `Bem-vindo(a), ${usuario.nome}.
-       Você está acessando o painel jurídico institucional.`;
-    btn.innerText = "⚖️ Ir para o painel jurídico";
-    btn.onclick = () => location.href = "staff/dashboard.html";
+    texto.innerHTML = `
+      Bem-vindo(a), <b>${usuario.nome}</b>.<br>
+      Acesso ao painel jurídico institucional.
+    `;
+
+    botoes.innerHTML = `
+      <button class="btn" onclick="go('staff/dashboard.html')">
+        ⚖️ Painel jurídico
+      </button>
+
+      <button class="btn secondary" onclick="go('tickets.html#precos')">
+        💰 Tabela de serviços
+      </button>
+    `;
   }
 
+  /* ================= COORDENACAO ================= */
   if (usuario.nivel === "coordenacao") {
-    texto.innerText =
-      `Bem-vindo(a), ${usuario.nome}.
-       Painel administrativo do Supremo Tribunal de Oasis.`;
-    btn.innerText = "👑 Ir para o painel da coordenação";
-    btn.onclick = () => location.href = "staff/coordenacao.html";
+    texto.innerHTML = `
+      Bem-vindo(a), <b>${usuario.nome}</b>.<br>
+      Painel administrativo do Supremo Tribunal de Oasis.
+    `;
+
+    botoes.innerHTML = `
+      <button class="btn" onclick="go('staff/coordenacao.html')">
+        👑 Painel da coordenação
+      </button>
+
+      <button class="btn secondary" onclick="go('staff/dashboard.html')">
+        ⚖️ Solicitações abertas
+      </button>
+
+      <button class="btn ghost" onclick="go('tickets.html#precos')">
+        💰 Valores institucionais
+      </button>
+    `;
+  }
+
+  function go(url) {
+    location.href = url;
   }
 </script>
 
