--- a/tickets.html
+++ b/tickets.html
@@ -11,7 +11,6 @@
 <!-- 🔐 PROTEÇÃO DE ACESSO -->
 <script>
   const usuario = JSON.parse(localStorage.getItem("usuario"));
-
   if (!usuario || usuario.nivel !== "cidadao") {
     location.href = "index.html";
   }
@@ -38,41 +37,60 @@
 <!-- ================= CONTEÚDO ================= -->
 <main class="content official">
 
-  <!-- ===== SOLICITAÇÕES ===== -->
-  <section id="solicitacoes" class="aba">
-    <h2>🎫 Sistema de Tickets</h2>
+  <!-- ================= SOLICITAÇÕES ================= -->
+  <section id="solicitacoes" class="aba solicitacoes-clean">
 
-    <div class="info-box official">
-      <b>Bem-vindo, <span id="nomeUsuario"></span></b><br><br>
-      • Apenas usuários autorizados podem abrir tickets<br>
-      • Limite de <b>1 ticket ativo por categoria</b><br>
-      • Resposta em até 24 horas<br>
-      • Mantenha a conversa objetiva e respeitosa
+    <div class="solicitacoes-header">
+      <img src="logo-oasis.png" class="logo-grande">
+      <h2>Solicitações ao Supremo Tribunal de Oasis</h2>
+      <p>Selecione abaixo o tipo de serviço desejado para iniciar um atendimento oficial.</p>
     </div>
 
-    <div class="category-grid official">
-      <button onclick="abrirCategoria('Troca de Nome')">📜 Troca de Nome</button>
-      <button onclick="abrirCategoria('Adoção')">👶 Adoção</button>
-      <button onclick="abrirCategoria('Jovem Aprendiz')">🧑‍🎓 Jovem Aprendiz</button>
-      <button onclick="abrirCategoria('Divórcio')">💔 Divórcio</button>
-      <button onclick="abrirCategoria('Casamento')">💍 Casamento</button>
-      <button onclick="abrirCategoria('Nascimento')">👼 Nascimento</button>
-      <button onclick="abrirCategoria('Limpeza de Ficha')">🧹 Limpeza de Ficha</button>
-      <button onclick="abrirCategoria('Porte de Arma')">🔫 Porte de Arma</button>
+    <!-- SERVIÇOS CIVIS -->
+    <div class="bloco-servicos">
+      <h3>💍 Serviços Civis</h3>
+      <div class="grid-servicos">
+        <button onclick="abrirCategoria('Casamento')">💍 Casamento</button>
+        <button onclick="abrirCategoria('Divórcio')">💔 Divórcio</button>
+        <button onclick="abrirCategoria('Nascimento')">👼 Nascimento</button>
+        <button onclick="abrirCategoria('Adoção')">👶 Adoção</button>
+        <button onclick="abrirCategoria('Troca de Nome')">📜 Troca de Nome</button>
+      </div>
     </div>
+
+    <!-- SERVIÇOS JURÍDICOS -->
+    <div class="bloco-servicos">
+      <h3>⚖️ Serviços Jurídicos</h3>
+      <div class="grid-servicos">
+        <button onclick="abrirCategoria('Porte de Arma')">🔫 Porte de Arma</button>
+        <button onclick="abrirCategoria('Limpeza de Ficha')">🧹 Limpeza de Ficha</button>
+        <button onclick="abrirCategoria('Jovem Aprendiz')">🧑‍🎓 Jovem Aprendiz</button>
+      </div>
+    </div>
+
+    <!-- ADMINISTRATIVOS -->
+    <div class="bloco-servicos">
+      <h3>🏛️ Demandas Administrativas</h3>
+      <div class="grid-servicos">
+        <button onclick="abrirCategoria('Denúncia')">⚠ Denúncia</button>
+        <button onclick="abrirCategoria('Falar com o Juiz')">⚖️ Falar com o Juiz</button>
+        <button onclick="abrirCategoria('Processos')">📁 Processos</button>
+        <button onclick="abrirCategoria('Suporte')">🛠 Suporte</button>
+      </div>
+    </div>
+
   </section>
 
-  <!-- ===== EM ANDAMENTO ===== -->
+  <!-- ================= EM ANDAMENTO ================= -->
   <section id="andamento" class="aba">
     <h2>🕒 Tickets em Andamento</h2>
     <p class="section-desc">
       Acompanhe abaixo seus atendimentos ativos.
-      Clique para continuar o atendimento.
     </p>
     <div id="listaTickets" class="card-list official"></div>
   </section>
 
-  <!-- ===== CHAT ===== -->
+  <!-- ================= CHAT ================= -->
   <section id="chat" class="aba">
     <h2 id="chatTitulo">💬 Atendimento</h2>
     <div id="mensagens" class="chat-box official"></div>
@@ -85,26 +103,62 @@
     </div>
   </section>
 
-  <!-- ===== ADMINISTRATIVOS ===== -->
-  <section id="ticketsAdmin" class="aba">
-    <h2>🎫 Atendimentos Administrativos</h2>
-
-    <div class="info-box official">
-      Utilize estas opções apenas para demandas institucionais.
-    </div>
-
-    <div class="category-grid official">
-      <button onclick="abrirCategoria('Denúncia')">⚠ Denúncia</button>
-      <button onclick="abrirCategoria('Falar com o Juiz')">⚖️ Falar com o Juiz</button>
-      <button onclick="abrirCategoria('Suporte')">🛠 Suporte</button>
-      <button onclick="abrirCategoria('Processos')">📁 Processos</button>
-    </div>
-  </section>
-
-  <!-- ===== PREÇOS ===== -->
+  <!-- ================= PREÇOS ================= -->
   <section id="precos" class="aba">
-    <h2>💰 Serviços Disponíveis ao Público</h2>
-    <!-- (mantém exatamente como você já tinha) -->
+    <h2>⚖️ Serviços Disponíveis ao Público – Supremo Tribunal de Oasis</h2>
+
+    <div class="price-card official">
+      <h3>🏛️ Atendimentos Jurídicos</h3>
+      <ul>
+        <li>Delegacia Sul — <b>$20.000</b></li>
+        <li>Delegacia PRF — <b>$30.000</b></li>
+      </ul>
+
+      <h4>Redução de Pena (em caso de condenação)</h4>
+      <ul class="sub-list">
+        <li>Presença do advogado — <b>-20%</b> (anulado em caso de réu primário)</li>
+        <li>Colaboração com as investigações — <b>a ser combinado</b></li>
+        <li>Confissão do crime — <b>-10%</b></li>
+        <li>Bom comportamento — <b>-10%</b></li>
+        <li><b>Total possível de redução: até 40%</b></li>
+      </ul>
+    </div>
+
+    <div class="price-card official">
+      <h3>🔫 Porte de Arma</h3>
+      <ul>
+        <li>Emissão de porte legal — <b>$20.000</b></li>
+      </ul>
+    </div>
+
+    <div class="price-card official">
+      <h3>💍 Certidões Civis</h3>
+      <ul>
+        <li>Casamento (com discurso personalizado) — <b>$150.000</b></li>
+        <li>Divórcio — <b>$200.000</b></li>
+        <li>Troca de Nome — <b>$250.000</b></li>
+        <li>Adoção — <b>$50.000</b></li>
+        <li>Nascimento — <b>$50.000</b></li>
+        <li>Jovem Aprendiz — <b>$30.000</b></li>
+      </ul>
+    </div>
+
+    <div class="price-card official">
+      <h3>🏢 Alvará de Funcionamento</h3>
+      <ul>
+        <li>Abertura — <b>$150.000</b></li>
+        <li>Renovação — <b>$60.000</b></li>
+      </ul>
+    </div>
+
+    <div class="price-card official">
+      <h3>🧾 Ações Jurídicas</h3>
+      <ul>
+        <li>Ação Judicial (entrada de processo) — <b>$50.000</b></li>
+        <li>Limpeza de Ficha Criminal (1 a 3 ocorrências) — <b>$50.000</b></li>
+        <li>A partir da 4ª ocorrência — <b>+ $10.000</b> por infração</li>
+      </ul>
+    </div>
   </section>
 
 </main>
@@ -112,8 +166,6 @@
 <script type="module" src="script.js"></script>
 
 <script>
-  document.getElementById("nomeUsuario").innerText = usuario.nome;
-
   function sair() {
     localStorage.clear();
     location.href = "index.html";
@@ -124,13 +176,9 @@
     mostrarAba(id);
   }
 
-  // 🔁 ATIVA ABA PELO HASH AO CARREGAR
   const hash = location.hash.replace("#", "");
-  if (hash) {
-    mostrarAba(hash);
-  } else {
-    mostrarAba("solicitacoes");
-  }
+  if (hash) mostrarAba(hash);
+  else mostrarAba("solicitacoes");
 </script>
 
 </body>
